# pinocchio-study

./: Cargo.toml  makefile
idl/: pinocchio_study.json
src/: lib.rs
src/create_ata/: mod.rs
src/state/: counter.rs
