[package]
name = "pinocchio-study"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.5.5", features = ["derive"] }
pinocchio = { version = "0.7.1", features = ["std"] }
pinocchio-pubkey = "0.2.2"

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"
